! A mystic fix for IE's overflow issues in topic pages... .wrc { width: 100% }. Take that! (ie6.css) * Replaced bars.png with yet another gradient in my arsenal, grad40.png -- this should allow themers to change cat_bar and title_bg background colors on a whim. (index.css) - Removed theme graphics that were no longer used... :) (backdrop.png, bars.png, frame_repeat.png, main_block.png, menu.png)

--- a/Themes/default/css/ie6.css
+++ b/Themes/default/css/ie6.css
@@ -152,7 +152,7 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 }
 
 /* Overrides for the admin section of the register template
-------------------------------------------------------- */
+----------------------------------------------------------- */
 #registration_agreement
 {
 	width: 99.5%;
@@ -166,7 +166,8 @@ dl.settings dd, #creator dd, dl.stats dd, dl.register_form dd, #poll_options dl.
 }
 #postmodify div.roundframe { margin-right: 0;}
 
-/* dropmenu hacks */
+/* Misc hacks
+------------- */
 
 .iefs
 {
@@ -195,4 +196,10 @@ a.linkOver { background: #c8e2fb }
 {
 	width: expression(this.clientWidth > 1200 ? '1200px' : '95%');
 	margin: auto;
+}
+.cat_bar h3 a {
+	color: white !important;
+}
+#forumposts .wrc {
+	width: 100%;
 }
